syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (Product) {}
    rpc GetByIDProduct(ProductPrimaryKey) returns (Product) {}
    rpc GetListProduct(GetListProductRequest) returns (GetListProductResponse) {}
    rpc UpdateProduct(UpdateProductRequest) returns (Product) {}
    rpc UpdatePatchProduct(UpdatePatchProductRequest) returns (Product) {}
    rpc DeleteProduct(ProductPrimaryKey) returns (google.protobuf.Empty) {}
}

message ProductPrimaryKey {
    string id = 1;
}

message Product {
    string id = 1;
    string name = 2;
    string barcode = 3;
    int32 product_number = 4;
    string photo = 5;
    string description = 6;
    string created_at = 7;
    string updated_at = 8;
}

message CreateProductRequest {
    string name = 1;
    string barcode = 2;
    int32 product_number = 3;
    string photo = 4;
    string description = 5;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string barcode = 3;
    int32 product_number = 4;
    string photo = 5;
    string description = 6;
}

message UpdatePatchProductRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListProductRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListProductResponse {
    int32 count = 1;
    repeated Product products = 2;
}
